--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
         targetSdkVersion 28
         versionCode 202
         versionName '2.0.2'
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         multiDexEnabled true //important
     }
@@ -47,12 +47,12 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':LoginView2')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
-    implementation 'com.android.support:support-vector-drawable:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v13:28.0.0'
-    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
@@ -64,22 +64,23 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.0.1'
     implementation 'com.github.MKergall:osmbonuspack:6.3'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
-    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.karumi:dexter:6.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testImplementation 'junit:junit:4.12'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
-    implementation 'com.github.GrenderG:Toasty:1.4.1'
+    implementation 'com.github.GrenderG:Toasty:1.4.2'
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
+
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-messaging:18.0.0'
     implementation 'com.google.android.gms:play-services-places:16.1.0'
     implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
         transitive = true
     }
-    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'androidx.multidex:multidex:2.0.0'
     implementation('com.budiyev.android:code-scanner:1.7.5') {
         transitive = false
     }
