--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'io.fabric'
 
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     defaultConfig {
         applicationId 'com.acpp.boniatillo'
         minSdkVersion 17
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 202
         versionName '2.0.2'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -74,13 +74,13 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
 
-    implementation 'com.google.firebase:firebase-core:16.0.9'
-    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-crashlytics'
+
     implementation 'com.google.android.gms:play-services-places:16.1.0'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
-        transitive = true
-    }
-    implementation 'androidx.multidex:multidex:2.0.0'
+    
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation('com.budiyev.android:code-scanner:1.7.5') {
         transitive = false
     }
