--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,1 @@
-include ':app', ':LoginView2', ':materialbarcodescanner'
-project(':LoginView2').projectDir = new File('LoginView')
-project(':materialbarcodescanner').projectDir = new File('app/libs/materialbarcodescanner')
+include ':app'
