--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
+    <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -17,7 +19,8 @@
         android:roundIcon="@mipmap/ic_app_acpp"
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:hardwareAccelerated="true">
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
@@ -87,6 +90,11 @@
 
         <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
         <activity android:name=".ui.activities.ActivitiesActivity"></activity>
+
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
     </application>
 
 </manifest>
