--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,23 +52,23 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.squareup.okhttp:logging-interceptor:2.6.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.1.7'
+    implementation 'io.reactivex:rxjava:1.3.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'org.osmdroid:osmdroid-android:6.0.1'
     implementation 'com.github.MKergall:osmbonuspack:6.3'
-    implementation 'agency.tango.android:material-intro-screen:0.0.5'
+//    implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'com.karumi:dexter:6.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     implementation 'com.github.GrenderG:Toasty:1.4.2'
-    implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
+//    implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
@@ -80,9 +80,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation('com.budiyev.android:code-scanner:1.7.5') {
-        transitive = false
-    }
+
     implementation 'com.github.kenglxn.QRGen:android:2.4.0'
 
     implementation('com.journeyapps:zxing-android-embedded:4.2.0') { transitive = false }
