#common-fix - added Crashlytics - added app version number

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
+
 
 
 android {
@@ -8,8 +9,8 @@ android {
         applicationId 'com.acpp.boniatillo'
         minSdkVersion 17
         targetSdkVersion 30
-        versionCode 202
-        versionName '2.0.2'
+        versionCode 203
+        versionName '2.0.3'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         multiDexEnabled true //important
