--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,13 @@ buildscript {
     repositories {
         mavenCentral()
         google()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath 'io.fabric.tools:gradle:1.29.0'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.0'
+
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -30,10 +28,6 @@ allprojects {
         maven {
             url 'https://maven.google.com/'
         }
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
-
 
     }
 }
