--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,17 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 
 android {
-    compileSdkVersion 30
+
+
     defaultConfig {
         applicationId 'com.acpp.boniatillo'
-        minSdkVersion 17
-        targetSdkVersion 30
-        versionCode 204
-        versionName '2.0.4'
+
+        minSdkVersion 19
+        targetSdkVersion 33
+        compileSdk 33
+
+        versionCode 206
+        versionName '2.0.6'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
         multiDexEnabled true //important
@@ -25,23 +29,15 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
-    }
-    configurations.all {
-        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
-            def requested = details.requested
-            if (requested.group == 'com.android.support') {
-                if (!requested.name.startsWith("multidex")) {
-                    details.useVersion '28.0.0'
-                }
-            }
-        }
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    lintOptions {
-        checkReleaseBuilds false
+    namespace 'com.acpp.boniatillo'
+
+    lint {
         abortOnError false
+        checkReleaseBuilds false
     }
 }
 
@@ -74,7 +70,7 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-vision:20.1.3'
 
-    implementation platform('com.google.firebase:firebase-bom:28.4.1')
+    implementation platform('com.google.firebase:firebase-bom:32.5.0')
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-crashlytics'
 
